adding scaled data

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,8 @@
     "%matplotlib inline\n",
     "plt.style.use('ggplot')\n",
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -962,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -1013,156 +1014,331 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>29995</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.253443</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>-0.211026</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1.615486</td>\n",
+       "      <td>-0.493732</td>\n",
+       "      <td>1.007526</td>\n",
+       "      <td>1.261730</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>3.185349</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>5.253443</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>-0.211026</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.615486</td>\n",
+       "      <td>-0.493732</td>\n",
+       "      <td>1.007526</td>\n",
+       "      <td>0.266544</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>-0.254635</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>1.141562</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.190351</td>\n",
+       "      <td>6.441500</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>-0.211026</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.711521</td>\n",
+       "      <td>-1.621490</td>\n",
+       "      <td>-1.304373</td>\n",
+       "      <td>0.266544</td>\n",
+       "      <td>-1.058379</td>\n",
+       "      <td>0.892026</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.190351</td>\n",
+       "      <td>6.441500</td>\n",
+       "      <td>5.349299</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>5.444586</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>-0.211026</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.451982</td>\n",
+       "      <td>0.634025</td>\n",
+       "      <td>-1.304373</td>\n",
+       "      <td>-0.728642</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>0.892026</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5.253443</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>5.523822</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>5.073260</td>\n",
+       "      <td>-0.211026</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.451982</td>\n",
+       "      <td>-0.493732</td>\n",
+       "      <td>-0.148424</td>\n",
+       "      <td>-0.728642</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>0.892026</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>1.141562</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>29995</td>\n",
+       "      <td>-0.190351</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>5.349299</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>-0.211026</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.711521</td>\n",
+       "      <td>-0.493732</td>\n",
+       "      <td>-0.148424</td>\n",
+       "      <td>-0.728642</td>\n",
+       "      <td>1.372813</td>\n",
+       "      <td>-0.254635</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>29996</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>-0.190351</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>-0.211026</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.4</td>\n",
+       "      <td>-0.451982</td>\n",
+       "      <td>-0.493732</td>\n",
+       "      <td>-0.148424</td>\n",
+       "      <td>0.266544</td>\n",
+       "      <td>2.588409</td>\n",
+       "      <td>-0.254635</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2.694918</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>29997</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>-0.190351</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>-0.211026</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.6</td>\n",
+       "      <td>-0.451982</td>\n",
+       "      <td>1.761783</td>\n",
+       "      <td>-1.304373</td>\n",
+       "      <td>0.266544</td>\n",
+       "      <td>-1.058379</td>\n",
+       "      <td>0.892026</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>29998</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>-0.190351</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>-0.211026</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.451982</td>\n",
+       "      <td>0.634025</td>\n",
+       "      <td>1.007526</td>\n",
+       "      <td>-0.728642</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>0.892026</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>29999</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>-0.190351</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>-0.211026</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.2</td>\n",
+       "      <td>0.711521</td>\n",
+       "      <td>-0.493732</td>\n",
+       "      <td>-1.304373</td>\n",
+       "      <td>0.266544</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>-0.254635</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 113 columns</p>\n",
+       "<p>30000 rows × 113 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Riki  Razor  Morphling  Brewmaster  Slardar  Wisp  Omniknight  Slark  \\\n",
-       "29995   0.0    0.0        1.0         0.0      0.0   0.0         0.0    0.0   \n",
-       "29996   0.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
-       "29997   0.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
-       "29998   0.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
-       "29999   0.0    0.0        0.0         0.0      0.0   0.0         0.0    0.0   \n",
+       "           Riki     Razor  Morphling  Brewmaster   Slardar     Wisp  \\\n",
+       "0      5.253443 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
+       "1      5.253443 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
+       "2     -0.190351  6.441500  -0.186940   -0.181034 -0.187513 -0.21094   \n",
+       "3     -0.190351  6.441500   5.349299   -0.181034 -0.187513 -0.21094   \n",
+       "4      5.253443 -0.155243  -0.186940    5.523822 -0.187513 -0.21094   \n",
+       "...         ...       ...        ...         ...       ...      ...   \n",
+       "29995 -0.190351 -0.155243   5.349299   -0.181034 -0.187513 -0.21094   \n",
+       "29996 -0.190351 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
+       "29997 -0.190351 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
+       "29998 -0.190351 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
+       "29999 -0.190351 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
        "\n",
-       "       Ogre Magi  Chaos Knight  ...  Carry  Support  Offlane  Mid  Roamer  \\\n",
-       "29995        0.0           0.0  ...    0.4      0.2      0.2  0.2     0.4   \n",
-       "29996        0.0           0.0  ...    0.2      0.2      0.2  0.4     0.6   \n",
-       "29997        0.0           0.0  ...    0.2      0.6      0.0  0.4     0.0   \n",
-       "29998        0.0           0.0  ...    0.2      0.4      0.4  0.2     0.2   \n",
-       "29999        0.0           0.0  ...    0.4      0.2      0.0  0.4     0.2   \n",
+       "       Omniknight     Slark  Ogre Magi  Chaos Knight  ...     Carry   Support  \\\n",
+       "0       -0.183669 -0.245093  -0.197112     -0.211026  ... -1.615486 -0.493732   \n",
+       "1       -0.183669 -0.245093  -0.197112     -0.211026  ... -1.615486 -0.493732   \n",
+       "2       -0.183669 -0.245093  -0.197112     -0.211026  ...  0.711521 -1.621490   \n",
+       "3        5.444586 -0.245093  -0.197112     -0.211026  ... -0.451982  0.634025   \n",
+       "4       -0.183669 -0.245093   5.073260     -0.211026  ... -0.451982 -0.493732   \n",
+       "...           ...       ...        ...           ...  ...       ...       ...   \n",
+       "29995   -0.183669 -0.245093  -0.197112     -0.211026  ...  0.711521 -0.493732   \n",
+       "29996   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.451982 -0.493732   \n",
+       "29997   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.451982  1.761783   \n",
+       "29998   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.451982  0.634025   \n",
+       "29999   -0.183669 -0.245093  -0.197112     -0.211026  ...  0.711521 -0.493732   \n",
        "\n",
-       "       Nuke/Disable  Winners  Most_Picked_719  Most_Picked_720  Won  \n",
-       "29995           0.2        0              0.0              0.0    0  \n",
-       "29996           0.2        0              0.4              0.0    0  \n",
-       "29997           0.4        0              0.0              0.0    0  \n",
-       "29998           0.4        0              0.0              0.0    0  \n",
-       "29999           0.2        0              0.0              0.0    0  \n",
+       "        Offlane       Mid    Roamer  Nuke/Disable  Winners  Most_Picked_719  \\\n",
+       "0      1.007526  1.261730  0.157217      3.185349      0.0        -0.678438   \n",
+       "1      1.007526  0.266544  0.157217     -0.254635      0.0        -0.678438   \n",
+       "2     -1.304373  0.266544 -1.058379      0.892026      0.0        -0.678438   \n",
+       "3     -1.304373 -0.728642  0.157217      0.892026      0.0        -0.678438   \n",
+       "4     -0.148424 -0.728642  0.157217      0.892026      0.0        -0.678438   \n",
+       "...         ...       ...       ...           ...      ...              ...   \n",
+       "29995 -0.148424 -0.728642  1.372813     -0.254635      0.0        -0.678438   \n",
+       "29996 -0.148424  0.266544  2.588409     -0.254635      0.0         2.694918   \n",
+       "29997 -1.304373  0.266544 -1.058379      0.892026      0.0        -0.678438   \n",
+       "29998  1.007526 -0.728642  0.157217      0.892026      0.0        -0.678438   \n",
+       "29999 -1.304373  0.266544  0.157217     -0.254635      0.0        -0.678438   \n",
        "\n",
-       "[5 rows x 113 columns]"
+       "       Most_Picked_720  Won  \n",
+       "0            -0.650247  1.0  \n",
+       "1             1.141562  1.0  \n",
+       "2            -0.650247  1.0  \n",
+       "3            -0.650247  1.0  \n",
+       "4             1.141562  1.0  \n",
+       "...                ...  ...  \n",
+       "29995        -0.650247 -1.0  \n",
+       "29996        -0.650247 -1.0  \n",
+       "29997        -0.650247 -1.0  \n",
+       "29998        -0.650247 -1.0  \n",
+       "29999        -0.650247 -1.0  \n",
+       "\n",
+       "[30000 rows x 113 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,12 +1350,20 @@
     "                         offlane_df, mid_df, roam_df, nuke_disable_df, \n",
     "                         top_wins_df, picked_719_df, picked_720_df, \n",
     "                         lineups['Won']], axis=1)\n",
+    "# scaling the dataset\n",
+    "cols = cleaned_df.columns\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(cleaned_df)\n",
+    "scaled_features = scaler.transform(cleaned_df)\n",
+    "\n",
+    "scaled_features_df = pd.DataFrame(scaled_features, columns=cols, index=cleaned_df.index)\n",
+    "scaled_features_df.head()\n",
     "\n",
     "# save the new dataframe as a csv file\n",
-    "export_csv = cleaned_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
-    "                                 index = None, header=True)\n",
+    "# export_csv = cleaned_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
+    "#                                  index = None, header=True)\n",
     "\n",
-    "cleaned_df.tail()"
+    "# cleaned_df.tail()"
    ]
   },
   {
