--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -963,386 +963,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Riki</th>\n",
-       "      <th>Razor</th>\n",
-       "      <th>Morphling</th>\n",
-       "      <th>Brewmaster</th>\n",
-       "      <th>Slardar</th>\n",
-       "      <th>Wisp</th>\n",
-       "      <th>Omniknight</th>\n",
-       "      <th>Slark</th>\n",
-       "      <th>Ogre Magi</th>\n",
-       "      <th>Chaos Knight</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Carry</th>\n",
-       "      <th>Support</th>\n",
-       "      <th>Offlane</th>\n",
-       "      <th>Mid</th>\n",
-       "      <th>Roamer</th>\n",
-       "      <th>Nuke/Disable</th>\n",
-       "      <th>Winners</th>\n",
-       "      <th>Most_Picked_719</th>\n",
-       "      <th>Most_Picked_720</th>\n",
-       "      <th>Won</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>5.253443</td>\n",
-       "      <td>-0.155243</td>\n",
-       "      <td>-0.186940</td>\n",
-       "      <td>-0.181034</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>-0.183669</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>-0.197112</td>\n",
-       "      <td>-0.211026</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.615486</td>\n",
-       "      <td>-0.493732</td>\n",
-       "      <td>1.007526</td>\n",
-       "      <td>1.261730</td>\n",
-       "      <td>0.157217</td>\n",
-       "      <td>3.185349</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>-0.650247</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>5.253443</td>\n",
-       "      <td>-0.155243</td>\n",
-       "      <td>-0.186940</td>\n",
-       "      <td>-0.181034</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>-0.183669</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>-0.197112</td>\n",
-       "      <td>-0.211026</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-1.615486</td>\n",
-       "      <td>-0.493732</td>\n",
-       "      <td>1.007526</td>\n",
-       "      <td>0.266544</td>\n",
-       "      <td>0.157217</td>\n",
-       "      <td>-0.254635</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>1.141562</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>-0.190351</td>\n",
-       "      <td>6.441500</td>\n",
-       "      <td>-0.186940</td>\n",
-       "      <td>-0.181034</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>-0.183669</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>-0.197112</td>\n",
-       "      <td>-0.211026</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.711521</td>\n",
-       "      <td>-1.621490</td>\n",
-       "      <td>-1.304373</td>\n",
-       "      <td>0.266544</td>\n",
-       "      <td>-1.058379</td>\n",
-       "      <td>0.892026</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>-0.650247</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>-0.190351</td>\n",
-       "      <td>6.441500</td>\n",
-       "      <td>5.349299</td>\n",
-       "      <td>-0.181034</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>5.444586</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>-0.197112</td>\n",
-       "      <td>-0.211026</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.451982</td>\n",
-       "      <td>0.634025</td>\n",
-       "      <td>-1.304373</td>\n",
-       "      <td>-0.728642</td>\n",
-       "      <td>0.157217</td>\n",
-       "      <td>0.892026</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>-0.650247</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>5.253443</td>\n",
-       "      <td>-0.155243</td>\n",
-       "      <td>-0.186940</td>\n",
-       "      <td>5.523822</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>-0.183669</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>5.073260</td>\n",
-       "      <td>-0.211026</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.451982</td>\n",
-       "      <td>-0.493732</td>\n",
-       "      <td>-0.148424</td>\n",
-       "      <td>-0.728642</td>\n",
-       "      <td>0.157217</td>\n",
-       "      <td>0.892026</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>1.141562</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>29995</td>\n",
-       "      <td>-0.190351</td>\n",
-       "      <td>-0.155243</td>\n",
-       "      <td>5.349299</td>\n",
-       "      <td>-0.181034</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>-0.183669</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>-0.197112</td>\n",
-       "      <td>-0.211026</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.711521</td>\n",
-       "      <td>-0.493732</td>\n",
-       "      <td>-0.148424</td>\n",
-       "      <td>-0.728642</td>\n",
-       "      <td>1.372813</td>\n",
-       "      <td>-0.254635</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>-0.650247</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>29996</td>\n",
-       "      <td>-0.190351</td>\n",
-       "      <td>-0.155243</td>\n",
-       "      <td>-0.186940</td>\n",
-       "      <td>-0.181034</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>-0.183669</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>-0.197112</td>\n",
-       "      <td>-0.211026</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.451982</td>\n",
-       "      <td>-0.493732</td>\n",
-       "      <td>-0.148424</td>\n",
-       "      <td>0.266544</td>\n",
-       "      <td>2.588409</td>\n",
-       "      <td>-0.254635</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.694918</td>\n",
-       "      <td>-0.650247</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>29997</td>\n",
-       "      <td>-0.190351</td>\n",
-       "      <td>-0.155243</td>\n",
-       "      <td>-0.186940</td>\n",
-       "      <td>-0.181034</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>-0.183669</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>-0.197112</td>\n",
-       "      <td>-0.211026</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.451982</td>\n",
-       "      <td>1.761783</td>\n",
-       "      <td>-1.304373</td>\n",
-       "      <td>0.266544</td>\n",
-       "      <td>-1.058379</td>\n",
-       "      <td>0.892026</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>-0.650247</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>29998</td>\n",
-       "      <td>-0.190351</td>\n",
-       "      <td>-0.155243</td>\n",
-       "      <td>-0.186940</td>\n",
-       "      <td>-0.181034</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>-0.183669</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>-0.197112</td>\n",
-       "      <td>-0.211026</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.451982</td>\n",
-       "      <td>0.634025</td>\n",
-       "      <td>1.007526</td>\n",
-       "      <td>-0.728642</td>\n",
-       "      <td>0.157217</td>\n",
-       "      <td>0.892026</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>-0.650247</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>29999</td>\n",
-       "      <td>-0.190351</td>\n",
-       "      <td>-0.155243</td>\n",
-       "      <td>-0.186940</td>\n",
-       "      <td>-0.181034</td>\n",
-       "      <td>-0.187513</td>\n",
-       "      <td>-0.21094</td>\n",
-       "      <td>-0.183669</td>\n",
-       "      <td>-0.245093</td>\n",
-       "      <td>-0.197112</td>\n",
-       "      <td>-0.211026</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.711521</td>\n",
-       "      <td>-0.493732</td>\n",
-       "      <td>-1.304373</td>\n",
-       "      <td>0.266544</td>\n",
-       "      <td>0.157217</td>\n",
-       "      <td>-0.254635</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-0.678438</td>\n",
-       "      <td>-0.650247</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>30000 rows × 113 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Riki     Razor  Morphling  Brewmaster   Slardar     Wisp  \\\n",
-       "0      5.253443 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
-       "1      5.253443 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
-       "2     -0.190351  6.441500  -0.186940   -0.181034 -0.187513 -0.21094   \n",
-       "3     -0.190351  6.441500   5.349299   -0.181034 -0.187513 -0.21094   \n",
-       "4      5.253443 -0.155243  -0.186940    5.523822 -0.187513 -0.21094   \n",
-       "...         ...       ...        ...         ...       ...      ...   \n",
-       "29995 -0.190351 -0.155243   5.349299   -0.181034 -0.187513 -0.21094   \n",
-       "29996 -0.190351 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
-       "29997 -0.190351 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
-       "29998 -0.190351 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
-       "29999 -0.190351 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
-       "\n",
-       "       Omniknight     Slark  Ogre Magi  Chaos Knight  ...     Carry   Support  \\\n",
-       "0       -0.183669 -0.245093  -0.197112     -0.211026  ... -1.615486 -0.493732   \n",
-       "1       -0.183669 -0.245093  -0.197112     -0.211026  ... -1.615486 -0.493732   \n",
-       "2       -0.183669 -0.245093  -0.197112     -0.211026  ...  0.711521 -1.621490   \n",
-       "3        5.444586 -0.245093  -0.197112     -0.211026  ... -0.451982  0.634025   \n",
-       "4       -0.183669 -0.245093   5.073260     -0.211026  ... -0.451982 -0.493732   \n",
-       "...           ...       ...        ...           ...  ...       ...       ...   \n",
-       "29995   -0.183669 -0.245093  -0.197112     -0.211026  ...  0.711521 -0.493732   \n",
-       "29996   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.451982 -0.493732   \n",
-       "29997   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.451982  1.761783   \n",
-       "29998   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.451982  0.634025   \n",
-       "29999   -0.183669 -0.245093  -0.197112     -0.211026  ...  0.711521 -0.493732   \n",
-       "\n",
-       "        Offlane       Mid    Roamer  Nuke/Disable  Winners  Most_Picked_719  \\\n",
-       "0      1.007526  1.261730  0.157217      3.185349      0.0        -0.678438   \n",
-       "1      1.007526  0.266544  0.157217     -0.254635      0.0        -0.678438   \n",
-       "2     -1.304373  0.266544 -1.058379      0.892026      0.0        -0.678438   \n",
-       "3     -1.304373 -0.728642  0.157217      0.892026      0.0        -0.678438   \n",
-       "4     -0.148424 -0.728642  0.157217      0.892026      0.0        -0.678438   \n",
-       "...         ...       ...       ...           ...      ...              ...   \n",
-       "29995 -0.148424 -0.728642  1.372813     -0.254635      0.0        -0.678438   \n",
-       "29996 -0.148424  0.266544  2.588409     -0.254635      0.0         2.694918   \n",
-       "29997 -1.304373  0.266544 -1.058379      0.892026      0.0        -0.678438   \n",
-       "29998  1.007526 -0.728642  0.157217      0.892026      0.0        -0.678438   \n",
-       "29999 -1.304373  0.266544  0.157217     -0.254635      0.0        -0.678438   \n",
-       "\n",
-       "       Most_Picked_720  Won  \n",
-       "0            -0.650247  1.0  \n",
-       "1             1.141562  1.0  \n",
-       "2            -0.650247  1.0  \n",
-       "3            -0.650247  1.0  \n",
-       "4             1.141562  1.0  \n",
-       "...                ...  ...  \n",
-       "29995        -0.650247 -1.0  \n",
-       "29996        -0.650247 -1.0  \n",
-       "29997        -0.650247 -1.0  \n",
-       "29998        -0.650247 -1.0  \n",
-       "29999        -0.650247 -1.0  \n",
-       "\n",
-       "[30000 rows x 113 columns]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# concatanate all the features together\n",
     "cleaned_df = pd.concat([dummies_df, melee_df, str_df, agi_df, int_df, \n",
@@ -1350,6 +975,7 @@
     "                         offlane_df, mid_df, roam_df, nuke_disable_df, \n",
     "                         top_wins_df, picked_719_df, picked_720_df, \n",
     "                         lineups['Won']], axis=1)\n",
+    "\n",
     "# scaling the dataset\n",
     "cols = cleaned_df.columns\n",
     "scaler = StandardScaler()\n",
@@ -1362,6 +988,9 @@
     "# save the new dataframe as a csv file\n",
     "# export_csv = cleaned_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_cleaned.csv', \n",
     "#                                  index = None, header=True)\n",
+    "\n",
+    "# scaled_csv = scaled_features_df.to_csv (r'C:\\Users\\GILOR\\Desktop\\data_science\\Flatiron_projects\\Dota_Victory_Classification\\dota2_scaled.csv', \n",
+    "#                                         index = None, header=True)\n",
     "\n",
     "# cleaned_df.tail()"
    ]
