--- a/dota_classification_models.ipynb
+++ b/dota_classification_models.ipynb
@@ -17,10 +17,7 @@
     "import helper_functions.py as hlf\n",
     "\n",
     "from sklearn.metrics import recall_score, accuracy_score, roc_curve, auc, confusion_matrix\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "\n",
-    "# #Seaborns Beautiful Styling\n",
-    "# sns.set_style(\"darkgrid\", {\"axes.facecolor\": \".9\"})"
+    "from sklearn.model_selection import train_test_split, GridSearchCV"
    ]
   },
   {
