--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -10,17 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import helper_functions\n",
+    "# import helper_functions.py\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "%matplotlib inline\n",
+    "# %matplotlib inline\n",
     "plt.style.use('ggplot')\n",
     "\n",
     "import requests\n",
