removed win ratio'

--- a/dota2_EDA.ipynb
+++ b/dota2_EDA.ipynb
@@ -482,15 +482,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Strength</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Strength\n",
+       "0         0\n",
+       "1         0\n",
+       "2         1\n",
+       "3         2\n",
+       "4         2"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create a new feature: how many strength heroes\n",
     "str_df = features_df.where(~features_df.isin(str_heroes), None)\n",
     "str_df = pd.DataFrame(str_df.isnull().sum(axis=1), columns=['Strength'])\n",
     "str_df = str_df \n",
-    "# str_df.head()"
+    "str_df.head()"
    ]
   },
   {
@@ -890,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -935,16 +998,7 @@
     "plt.title('Win Lose Ratio')\n",
     "plt.ylabel('Win/Lose Ratio')\n",
     "plt.xticks(rotation=45, ha='right')\n",
-    "plt.savefig('win_lose_ratio.png') \n",
-    "\n",
-    "# create 2 new feature: lowest and highest win to lose ratio charachters\n",
-    "high_ratio_df = features_df.where(~features_df.isin(top15_ratio), None)\n",
-    "high_ratio_df = pd.DataFrame(high_ratio_df.isnull().sum(axis=1), columns=['Winning'])\n",
-    "# high_ratio_df.head()     \n",
-    "\n",
-    "low_ratio_df = features_df.where(~features_df.isin(bot15_ratio), None)\n",
-    "low_ratio_df = pd.DataFrame(low_ratio_df.isnull().sum(axis=1), columns=['Losing'])\n",
-    "# high_ratio_df.head()                    "
+    "plt.savefig('win_lose_ratio.png')                "
    ]
   },
   {
@@ -983,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 70,
    "metadata": {
     "scrolled": true
    },
@@ -1020,19 +1074,163 @@
        "      <th>Ogre Magi</th>\n",
        "      <th>Chaos Knight</th>\n",
        "      <th>...</th>\n",
+       "      <th>Tier_3</th>\n",
+       "      <th>Carry</th>\n",
        "      <th>Support</th>\n",
        "      <th>Offlane</th>\n",
        "      <th>Mid</th>\n",
        "      <th>Roamer</th>\n",
        "      <th>Nuke/Disable</th>\n",
-       "      <th>Winning</th>\n",
-       "      <th>Losing</th>\n",
        "      <th>Most_Picked_719</th>\n",
        "      <th>Most_Picked_720</th>\n",
        "      <th>Won</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>5.253443</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>-0.211026</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.113087</td>\n",
+       "      <td>-1.615486</td>\n",
+       "      <td>-0.493732</td>\n",
+       "      <td>1.007526</td>\n",
+       "      <td>1.261730</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>3.185349</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>5.253443</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>-0.211026</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.995611</td>\n",
+       "      <td>-1.615486</td>\n",
+       "      <td>-0.493732</td>\n",
+       "      <td>1.007526</td>\n",
+       "      <td>0.266544</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>-0.254635</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>1.141562</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>-0.190351</td>\n",
+       "      <td>6.441500</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>-0.211026</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.995611</td>\n",
+       "      <td>0.711521</td>\n",
+       "      <td>-1.621490</td>\n",
+       "      <td>-1.304373</td>\n",
+       "      <td>0.266544</td>\n",
+       "      <td>-1.058379</td>\n",
+       "      <td>0.892026</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>-0.190351</td>\n",
+       "      <td>6.441500</td>\n",
+       "      <td>5.349299</td>\n",
+       "      <td>-0.181034</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>5.444586</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>-0.197112</td>\n",
+       "      <td>-0.211026</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.995611</td>\n",
+       "      <td>-0.451982</td>\n",
+       "      <td>0.634025</td>\n",
+       "      <td>-1.304373</td>\n",
+       "      <td>-0.728642</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>0.892026</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>-0.650247</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5.253443</td>\n",
+       "      <td>-0.155243</td>\n",
+       "      <td>-0.186940</td>\n",
+       "      <td>5.523822</td>\n",
+       "      <td>-0.187513</td>\n",
+       "      <td>-0.21094</td>\n",
+       "      <td>-0.183669</td>\n",
+       "      <td>-0.245093</td>\n",
+       "      <td>5.073260</td>\n",
+       "      <td>-0.211026</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.113087</td>\n",
+       "      <td>-0.451982</td>\n",
+       "      <td>-0.493732</td>\n",
+       "      <td>-0.148424</td>\n",
+       "      <td>-0.728642</td>\n",
+       "      <td>0.157217</td>\n",
+       "      <td>0.892026</td>\n",
+       "      <td>-0.678438</td>\n",
+       "      <td>1.141562</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <td>29995</td>\n",
        "      <td>-0.190351</td>\n",
@@ -1046,13 +1244,13 @@
        "      <td>-0.197112</td>\n",
        "      <td>-0.211026</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.113087</td>\n",
+       "      <td>0.711521</td>\n",
        "      <td>-0.493732</td>\n",
        "      <td>-0.148424</td>\n",
        "      <td>-0.728642</td>\n",
        "      <td>1.372813</td>\n",
        "      <td>-0.254635</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>-0.678438</td>\n",
        "      <td>-0.650247</td>\n",
        "      <td>0</td>\n",
@@ -1070,13 +1268,13 @@
        "      <td>-0.197112</td>\n",
        "      <td>-0.211026</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.113087</td>\n",
+       "      <td>-0.451982</td>\n",
        "      <td>-0.493732</td>\n",
        "      <td>-0.148424</td>\n",
        "      <td>0.266544</td>\n",
        "      <td>2.588409</td>\n",
        "      <td>-0.254635</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>2.694918</td>\n",
        "      <td>-0.650247</td>\n",
        "      <td>0</td>\n",
@@ -1094,13 +1292,13 @@
        "      <td>-0.197112</td>\n",
        "      <td>-0.211026</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.113087</td>\n",
+       "      <td>-0.451982</td>\n",
        "      <td>1.761783</td>\n",
        "      <td>-1.304373</td>\n",
        "      <td>0.266544</td>\n",
        "      <td>-1.058379</td>\n",
        "      <td>0.892026</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>-0.678438</td>\n",
        "      <td>-0.650247</td>\n",
        "      <td>0</td>\n",
@@ -1118,13 +1316,13 @@
        "      <td>-0.197112</td>\n",
        "      <td>-0.211026</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.113087</td>\n",
+       "      <td>-0.451982</td>\n",
        "      <td>0.634025</td>\n",
        "      <td>1.007526</td>\n",
        "      <td>-0.728642</td>\n",
        "      <td>0.157217</td>\n",
        "      <td>0.892026</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>-0.678438</td>\n",
        "      <td>-0.650247</td>\n",
        "      <td>0</td>\n",
@@ -1142,55 +1340,79 @@
        "      <td>-0.197112</td>\n",
        "      <td>-0.211026</td>\n",
        "      <td>...</td>\n",
+       "      <td>-0.113087</td>\n",
+       "      <td>0.711521</td>\n",
        "      <td>-0.493732</td>\n",
        "      <td>-1.304373</td>\n",
        "      <td>0.266544</td>\n",
        "      <td>0.157217</td>\n",
        "      <td>-0.254635</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>-0.678438</td>\n",
        "      <td>-0.650247</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 114 columns</p>\n",
+       "<p>30000 rows × 112 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "           Riki     Razor  Morphling  Brewmaster   Slardar     Wisp  \\\n",
+       "0      5.253443 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
+       "1      5.253443 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
+       "2     -0.190351  6.441500  -0.186940   -0.181034 -0.187513 -0.21094   \n",
+       "3     -0.190351  6.441500   5.349299   -0.181034 -0.187513 -0.21094   \n",
+       "4      5.253443 -0.155243  -0.186940    5.523822 -0.187513 -0.21094   \n",
+       "...         ...       ...        ...         ...       ...      ...   \n",
        "29995 -0.190351 -0.155243   5.349299   -0.181034 -0.187513 -0.21094   \n",
        "29996 -0.190351 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
        "29997 -0.190351 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
        "29998 -0.190351 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
        "29999 -0.190351 -0.155243  -0.186940   -0.181034 -0.187513 -0.21094   \n",
        "\n",
-       "       Omniknight     Slark  Ogre Magi  Chaos Knight  ...   Support   Offlane  \\\n",
-       "29995   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.493732 -0.148424   \n",
-       "29996   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.493732 -0.148424   \n",
-       "29997   -0.183669 -0.245093  -0.197112     -0.211026  ...  1.761783 -1.304373   \n",
-       "29998   -0.183669 -0.245093  -0.197112     -0.211026  ...  0.634025  1.007526   \n",
-       "29999   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.493732 -1.304373   \n",
+       "       Omniknight     Slark  Ogre Magi  Chaos Knight  ...    Tier_3     Carry  \\\n",
+       "0       -0.183669 -0.245093  -0.197112     -0.211026  ... -0.113087 -1.615486   \n",
+       "1       -0.183669 -0.245093  -0.197112     -0.211026  ...  0.995611 -1.615486   \n",
+       "2       -0.183669 -0.245093  -0.197112     -0.211026  ...  0.995611  0.711521   \n",
+       "3        5.444586 -0.245093  -0.197112     -0.211026  ...  0.995611 -0.451982   \n",
+       "4       -0.183669 -0.245093   5.073260     -0.211026  ... -0.113087 -0.451982   \n",
+       "...           ...       ...        ...           ...  ...       ...       ...   \n",
+       "29995   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.113087  0.711521   \n",
+       "29996   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.113087 -0.451982   \n",
+       "29997   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.113087 -0.451982   \n",
+       "29998   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.113087 -0.451982   \n",
+       "29999   -0.183669 -0.245093  -0.197112     -0.211026  ... -0.113087  0.711521   \n",
        "\n",
-       "            Mid    Roamer  Nuke/Disable  Winning  Losing  Most_Picked_719  \\\n",
-       "29995 -0.728642  1.372813     -0.254635      0.0     0.0        -0.678438   \n",
-       "29996  0.266544  2.588409     -0.254635      0.0     0.0         2.694918   \n",
-       "29997  0.266544 -1.058379      0.892026      0.0     0.0        -0.678438   \n",
-       "29998 -0.728642  0.157217      0.892026      0.0     0.0        -0.678438   \n",
-       "29999  0.266544  0.157217     -0.254635      0.0     0.0        -0.678438   \n",
+       "        Support   Offlane       Mid    Roamer  Nuke/Disable  Most_Picked_719  \\\n",
+       "0     -0.493732  1.007526  1.261730  0.157217      3.185349        -0.678438   \n",
+       "1     -0.493732  1.007526  0.266544  0.157217     -0.254635        -0.678438   \n",
+       "2     -1.621490 -1.304373  0.266544 -1.058379      0.892026        -0.678438   \n",
+       "3      0.634025 -1.304373 -0.728642  0.157217      0.892026        -0.678438   \n",
+       "4     -0.493732 -0.148424 -0.728642  0.157217      0.892026        -0.678438   \n",
+       "...         ...       ...       ...       ...           ...              ...   \n",
+       "29995 -0.493732 -0.148424 -0.728642  1.372813     -0.254635        -0.678438   \n",
+       "29996 -0.493732 -0.148424  0.266544  2.588409     -0.254635         2.694918   \n",
+       "29997  1.761783 -1.304373  0.266544 -1.058379      0.892026        -0.678438   \n",
+       "29998  0.634025  1.007526 -0.728642  0.157217      0.892026        -0.678438   \n",
+       "29999 -0.493732 -1.304373  0.266544  0.157217     -0.254635        -0.678438   \n",
        "\n",
        "       Most_Picked_720  Won  \n",
+       "0            -0.650247    1  \n",
+       "1             1.141562    1  \n",
+       "2            -0.650247    1  \n",
+       "3            -0.650247    1  \n",
+       "4             1.141562    1  \n",
+       "...                ...  ...  \n",
        "29995        -0.650247    0  \n",
        "29996        -0.650247    0  \n",
        "29997        -0.650247    0  \n",
        "29998        -0.650247    0  \n",
        "29999        -0.650247    0  \n",
        "\n",
-       "[5 rows x 114 columns]"
+       "[30000 rows x 112 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,8 +1422,8 @@
     "cleaned_df = pd.concat([dummies_df, melee_df, str_df, agi_df, int_df, \n",
     "                         op_tiers12_df, op_tiers3_df, carry_df, support_df, \n",
     "                         offlane_df, mid_df, roam_df, nuke_disable_df,\n",
-    "                         high_ratio_df, low_ratio_df, picked_719_df,\n",
-    "                         picked_720_df], axis=1)\n",
+    "                         picked_719_df, picked_720_df], axis=1)\n",
+    "                         \n",
     "                         \n",
     "\n",
     "# scaling featires\n",
@@ -1215,8 +1437,8 @@
     "scaled_features_df = pd.concat([scaled_features_df, lineups['Won']], axis=1)\n",
     "\n",
     "# save as new csv to for modeling purpose\n",
-    "scaled_csv = scaled_features_df.to_csv('dota2_scaled.csv')\n",
-    "scaled_features_df.tail()"
+    "# scaled_csv = scaled_features_df.to_csv('dota2_scaled.csv')\n",
+    "scaled_features_df"
    ]
   },
   {
